--- a/fasilitas.html
+++ b/fasilitas.html
@@ -18,7 +18,6 @@
 
     <script src="js/script.js" defer></script>
     <script src="js/gsap.js"></script>
-    <script src="js/ScrollTrigger.min.js"></script>
 
     <link rel="apple-touch-icon" href="img/logo HIMARAKSI.png">
     <link rel="shortcut icon" href="img/logo HIMARAKSI.png" type="image/x-icon">
@@ -72,7 +71,7 @@
                     </p>
                 </div>
                 <div class="img">
-                    <img src="img/hero-img.png" alt="img hero">
+                    <img src="img/3d/Saly-10.svg" alt="img hero">
                 </div>
             </div>
         </section>
@@ -292,12 +291,6 @@
             y: -100,
             duration: 2,
             ease: Power4.easeOut,
-
-            scrollTrigger: {
-                trigger: "table",
-                start: "top center",
-                toggleActions: "restart resume reverse pause"
-            }
         })
     </script>
 
