--- a/detailEvent.html
+++ b/detailEvent.html
@@ -21,6 +21,12 @@
 
     <link rel="apple-touch-icon" href="img/logo HIMARAKSI.png">
     <link rel="shortcut icon" href="img/logo HIMARAKSI.png" type="image/x-icon">
+
+    <style>
+        html {
+            overflow-x: unset !important;
+        }
+    </style>
 </head>
 
 <body>
